--- a/oldFight/res/values/strings.xml
+++ b/oldFight/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">oldFight</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+	<string name="normalText">普通模式</string>
 </resources>
